# pypeer

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: janitor.yml
scripts/: janitor.py
src/pypeer/: constants.py  main.py  styles.tcss  terminal_ui.py
src/pypeer/engine/: firebase_sync.py  rtc_engine.py  signaler.py
src/pypeer/logic/: connection_manager.py
src/pypeer/screens/: __init__.py  chat.py  host.py  join.py  messaging.py  start.py
src/pypeer/utils/: id_generator.py
tests/: test_engine.py  test_firebase_integration.py  test_ui.py
